--- a/src/dotnet/feelthemath.org/feelthemoney.html
+++ b/src/dotnet/feelthemath.org/feelthemoney.html
@@ -243,7 +243,7 @@
                 Source: <a class="source" target="_blank" xlink:href="http://www.opensecrets.org/pres16/" alignment-baseline="hanging">Open Secrets</a>
             </text>
         </svg>
-        <span class="roboto grey disclaimer" style="font-size:2.4rem;margin-top:10rem;">The number of individual contributions a candidate receives illustrates the public&#8217;s interest in that candidate. So how do the candidates stack up? <b>78% ($225M)</b> of Hillary Clinton&#8217;s campaign is supported by maxed-out wealthy donors and corporate-sponsored super PACs. Her support from the general public is abysmal, accumulating just <b>22% (64M)</b> of her seemingly impressive haul. Trump&#8217;s campaign reflects his narcissism as he has covered <b>72% (42M)</b> of his own campign. Similar to Hillary, the general public has only contributed <b>22% (13M)</b> to his campaign. By contrast the general public has contributed <b>90% (187M)</b> of Bernie&#8217;s campaign. It's pretty clear that one candidate will cater to the wealthy, one will cater to himself and <b>Bernie will cater to the people</b> as he has always done for the last 30 years.</span>
+        <span class="roboto grey disclaimer" style="font-size:2.4rem;margin-top:10rem;">The number of individual contributions a candidate receives illustrates the public&#8217;s interest in that candidate. So how do the candidates stack up? <b>78% ($225 million)</b> of Hillary Clinton&#8217;s campaign is supported by maxed-out wealthy donors and corporate-sponsored super PACs. Her support from the general public is abysmal, accumulating just <b>22% (64 million)</b> of her seemingly impressive haul. Trump&#8217;s campaign reflects his narcissism as he has covered <b>72% (42 million)</b> of his own campign. Similar to Hillary, the general public has only contributed <b>22% (13 million)</b> to his campaign. By contrast the general public has contributed <b>90% (187 million)</b> of Bernie&#8217;s campaign. It's pretty clear that one candidate will cater to the wealthy, one will cater to himself and <b>Bernie will cater to the people</b> as he has always done for the last 30 years.</span>
 
     </section>
     <section>
@@ -266,9 +266,9 @@
     <div class="spacer"></div>
 
     <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (function(i,s,o,g,r,a, million){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a, million)
   })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
   ga('create', 'UA-77293475-1', 'auto');
