--- a/src/dotnet/feelthemath.org/index.html
+++ b/src/dotnet/feelthemath.org/index.html
@@ -448,7 +448,7 @@
         <a class="donate-button" target="_blank" href="https://secure.actblue.com/contribute/page/feelthemath">
             <button class="cta anton">HELP BERNIE WIN</button>
         </a>
-        <span class="roboto grey disclaimer" style="font-size:2.4rem;"><b>100% of your donation goes directly to Bernie&#8217;s campaign.</b><br><br>We are simply two web developers who are donating our time and our skills to help Bernie win. <b>To date, we have raised over $6,300 for Bernie through ActBlue. If we keep working together and spreading the word, our contributions can go a long way.</b></span>
+        <span class="roboto grey disclaimer" style="font-size:2.4rem;"><b>100% of your donation goes directly to Bernie&#8217;s campaign.</b><br><br>We are simply two web developers who are donating our time and our skills to help Bernie win. To date, we have raised over $6,300 for Bernie through ActBlue. <b>If we keep working together and spreading the word, our contributions can go a long way.</b></span>
     </section>
     <section id="donate">
         <span class="anton red text-flow" style="font-size:23.8rem;">DOWNLOAD</span>
