--- a/src/dotnet/feelthemath.org/feelthemoney.html
+++ b/src/dotnet/feelthemath.org/feelthemoney.html
@@ -261,7 +261,7 @@
         <a class="donate-button" target="_blank" href="https://secure.actblue.com/contribute/page/feelthemath">
             <button class="cta anton">HELP BERNIE WIN</button>
         </a>
-        <span class="roboto grey disclaimer" style="font-size:2.4rem;">100% of your donation goes directly to Bernie&#8217;s campaign.<br><b>To date, we have raised over $6,300 for Bernie through ActBlue.<br>Thank you so much for your generous support!</b></span>
+        <span class="roboto grey disclaimer" style="font-size:2.4rem;"><b>100% of your donation goes directly to Bernie&#8217;s campaign.</b><br><br>We are simply two web developers who are donating our time and our skills to help Bernie win. To date, we have raised over $6,300 for Bernie through ActBlue. <b>If we keep working together and spreading the word, our contributions can go a long way.</b></span>
     </section>
     <div class="spacer"></div>
 
