--- a/src/dotnet/feelthemath.org/index.html
+++ b/src/dotnet/feelthemath.org/index.html
@@ -456,7 +456,7 @@
         <a class="donate-button" target="_blank" href="shareables/FeelTheMath_Shareables.zip">
             <button class="cta anton" style="width:72rem">DOWNLOAD THE MATH PACK</button>
         </a>
-        <span class="roboto grey disclaimer" style="font-size:2.4rem;"><b>We need to spread this message far and wide!</b> Please download the .ZIP file of images and share them. <b>A picture is worth a thousand words.</b></span>
+        <span class="roboto grey disclaimer" style="font-size:2.4rem;"><b>We need to spread this message far and wide!</b> Please download these images and share them. <b>A picture is worth a thousand words.</b></span>
     </section>
 
     <section id="thanks">
