--- a/src/dotnet/feelthemath.org/feelthemoney.html
+++ b/src/dotnet/feelthemath.org/feelthemoney.html
@@ -59,7 +59,7 @@
             <circle fill="#F15D5C" cx="1850" cy="155" r="89" />
             <path fill="#FFF" d="M1873.1 157.3h-14.5v51.5H1837v-51.5h-10.3V139h10.3v-11.7c0-8.4 4.2-21.5 21.5-21.5h15.9v17.8h-11.7s-4.7.9-4.7 5.2v10.8h16.4l-1.3 17.7z" />
         </a>
-        <a class="share-link" xlink:href="https://twitter.com/home?status=90%25%20of%20Bernie%27s%20campaign%20is%20supported%20by%20people%20like%20you.%2078%25%20of%20Hillary%27s%20is%20not.%20Trump%20is%20just%20in%20it%20for%20himself.%20http%3A%2F%2Fbit.ly%2F1Vm8yz2" target="_blank" cursor="pointer" id="twitter">
+        <a class="share-link" xlink:href="https://twitter.com/home?status=90%25%20of%20%40BernieSanders%27%20campaign%20is%20supported%20by%20people%20like%20you.%2078%25%20of%20Hillary%27s%20is%20not.%20%20http%3A%2F%2Fbit.ly%2F1Vm8yz2%20%23feelthebern%20%23bernie2016" target="_blank" cursor="pointer" id="twitter">
             <circle fill="#F15D5C" cx="1630" cy="155" r="89" />
             <path fill="#FFF" d="M1677.3 133.9v2.8c0 29-22 62.3-62.3 62.3-12.2 0-23.9-3.7-33.7-9.8 1.9 0 3.3.5 5.2.5 10.3 0 19.7-3.3 27.2-9.4-9.4 0-17.8-6.6-20.6-15 1.4.5 2.8.5 4.2.5 1.9 0 3.7-.5 5.6-.9-9.8-1.9-17.8-10.8-17.8-21.5v-.5c2.8 1.9 6.6 2.8 9.8 2.8-6.1-3.7-9.8-10.8-9.8-18.3 0-4.2.9-8 2.8-11.2 10.8 13.1 27.2 22 45 23-.5-1.4-.5-3.3-.5-5.2 0-12.2 9.8-22 22-22 6.1 0 12.2 2.8 15.9 7 5.2-.9 9.8-2.8 14.1-5.2-1.4 5.2-5.2 9.4-9.8 12.2 4.2-.5 8.4-1.9 12.6-3.3-1.9 4.7-5.7 8.4-9.9 11.2z" />
         </a>
