--- a/src/dotnet/feelthemath.org/index.html
+++ b/src/dotnet/feelthemath.org/index.html
@@ -5,7 +5,7 @@
     <meta property="og:title" content="FEEL THE MATH - How Bernie will win the contested democratic convention." />
     <meta property="og:image" content="http://www.feelthemath.org/images/FeelTheMath_Facebook-v4.jpg" />
     <meta property="og:site_name" content="FeelTheMath.org" />
-    <meta property="og:description" content="Bernie Sanders could still win in a contested convention. See the REAL math here." />
+    <meta property="og:description" content="You money has been stolen by the DNC. Learn how to get it back." />
     <meta property="og:url" content="http://www.feelthemath.org" />
     <meta property="fb:app_id" content="1166048190102756" />
 
