--- a/src/dotnet/feelthemath.org/index.html
+++ b/src/dotnet/feelthemath.org/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <meta property="og:title" content="FEEL THE MATH - How Bernie will win the contested democratic convention." />
+    <meta property="og:title" content="FEEL THE MATH - How your money meant nothing to any DNC campaign." />
     <meta property="og:image" content="http://www.feelthemath.org/images/FeelTheMath_Facebook-v4.jpg" />
     <meta property="og:site_name" content="FeelTheMath.org" />
     <meta property="og:description" content="You money has been stolen by the DNC. Learn how to get it back." />
